[package]
name = "ray-marching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
bytemuck = "1.14"
eframe = { version = "0.24", features = ["wgpu"] }
egui_node_graph = { git = "https://github.com/SergioRibera/egui_node_graph.git", version = "0.4.0", rev = "b315264d9f92417082b090cd1985135d65bad893" }
encase = { version = "0.7.0", features = ["mint"] }
enum_dispatch = "0.3.12"
mint = "0.5.9"
wgpu = "0.18"
